implemented CelebrationRepository and configured repository

--- a/CelebrationApp/CelebrationApp/CelebrationApp.csproj
+++ b/CelebrationApp/CelebrationApp/CelebrationApp.csproj
@@ -17,6 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Repository\Repository.csproj" />
+    <ProjectReference Include="..\..\Repository\CelebrationRepository.csproj" />
   </ItemGroup>
 </Project>
