--- a/CelebrationAppWPF/CelebrationAppWPF.csproj
+++ b/CelebrationAppWPF/CelebrationAppWPF.csproj
@@ -2,9 +2,15 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <Nullable>enable</Nullable>
+	<Platforms>x86;x64;arm64</Platforms>
+    <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CelebrationApp\CelebrationApp\CelebrationApp.csproj" />
+  </ItemGroup>
 
 </Project>
