--- a/CelebrationAppWPF/CelebrationAppWPF.csproj
+++ b/CelebrationAppWPF/CelebrationAppWPF.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CelebrationApp\CelebrationApp\CelebrationApp.csproj" />
   </ItemGroup>
 
