--- a/CelebrationAppWPF/CelebrationAppWPF.csproj
+++ b/CelebrationAppWPF/CelebrationAppWPF.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
 	<Platforms>x86;x64;arm64</Platforms>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWPF>true</UseWPF>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CelebrationApp\CelebrationApp\CelebrationApp.csproj" />
+    <ProjectReference Include="..\CelebrationCore\CelebrationCore.csproj" />
   </ItemGroup>
 
 </Project>
