--- a/CelebrationCore/CelebrationCore.csproj
+++ b/CelebrationCore/CelebrationCore.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="Assets\Fonts\Poppins-Regular.ttf" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Remove="Assets\Images\BlueSky.jpg" />
