--- a/CelebrationApp/CelebrationApp/CelebrationApp.csproj
+++ b/CelebrationApp/CelebrationApp/CelebrationApp.csproj
@@ -18,7 +18,6 @@
 		<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.0" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.197" />
-		<PackageReference Include="NLog" Version="5.0.1" />
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
 
@@ -36,6 +35,14 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\CelebrationCore\CelebrationCore.csproj" />
 		<ProjectReference Include="..\..\Repository\CelebrationRepository.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Update="nlog.config">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="NLog.xsd">
+	    <SubType>Designer</SubType>
+	  </None>
 	</ItemGroup>
 
 </Project>
