--- a/CelebrationCore/CelebrationCore.csproj
+++ b/CelebrationCore/CelebrationCore.csproj
@@ -4,6 +4,7 @@
 	<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <RuntimeIdentifiers>win-x86;win-x64;win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
