--- a/CelebrationApp/CelebrationApp/CelebrationApp.csproj
+++ b/CelebrationApp/CelebrationApp/CelebrationApp.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
 		<RootNamespace>CelebrationApp</RootNamespace>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
-		<Platforms>x86;x64;arm64</Platforms>
+		<Platforms>x64;arm64</Platforms>
 		<RuntimeIdentifiers>win-x86;win-x64;win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
 		<UseWinUI>true</UseWinUI>
 	</PropertyGroup>
