--- a/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
+++ b/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
@@ -95,6 +95,11 @@ jobs:
     runs-on: windows-latest
     steps:
     
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.7
+      with:
+        versionSpec: '5.5.0'
+    
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v0.9.7
