feat: generate a release

--- a/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
+++ b/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
@@ -89,12 +89,6 @@ jobs:
         Appx_Package_Dir: AppPackages
         Configuration: ${{ matrix.configuration }}
 
-  job4:
-    name: GitVersion (Generates the version of the repository)
-    needs: [job1, job2, job3]
-    runs-on: ubuntu-latest
-    
-    steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v2
@@ -144,9 +138,12 @@ jobs:
         echo "CommitDate: ${{ steps.gitversion.outputs.commitDate }}"
       
      # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
+    
+    - name: Upload server binaries to release
+      uses: svenstaro/upload-release-action@v1-release
       with:
-        name: CelebrationApp MSIX Package
-        path: 'CelebrationApp\CelebrationApp (Package)\AppPackages'
+        repo_token: ${{ secrets.ACCESS_TOKEN }}
+        file: 'CelebrationApp\CelebrationApp (Package)\AppPackages'
+        asset_name: CelebrationApp MSIX Package
         tag: "${{ steps.gitversion.outputs.fullSemVer }}"
+        overwrite: true
