--- a/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
+++ b/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
@@ -105,7 +105,7 @@ jobs:
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v0.9.7
-    - run: |
+      run: |
         echo "Major: ${{ steps.gitversion.outputs.major }}"
         echo "Minor: ${{ steps.gitversion.outputs.minor }}"
         echo "Patch: ${{ steps.gitversion.outputs.patch }}"
@@ -143,7 +143,7 @@ jobs:
       uses: svenstaro/upload-release-action@v1-release
       with:
         repo_token: ${{ secrets.ACCESS_TOKEN }}
-        file: 'CelebrationApp\CelebrationApp (Package)\AppPackages'
+        file: 'CelebrationApp\CelebrationApp (Package)'
         asset_name: CelebrationApp MSIX Package
         tag: "${{ steps.gitversion.outputs.fullSemVer }}"
         overwrite: true
