--- a/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
+++ b/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
@@ -89,15 +89,6 @@ jobs:
         Appx_Package_Dir: AppPackages
         Configuration: ${{ matrix.configuration }}
 
-    # Create the app package by building and packaging the Windows Application Packaging project
-    - name: Create the app package
-      run: msbuild $env:Solution_Name /m /p:Configuration=$env:Configuration /p:AppxBundlePlatforms=$env:Appx_Bundle_Platforms /p:AppxPackageDir=$env:Appx_Package_Dir /p:AppxBundle=$env:Appx_Bundle /p:AppxPackageIsForStore=True /p:UapAppxPackageBuildMode=StoreUpload
-      env:
-        Appx_Bundle: Always
-        Appx_Bundle_Platforms: x64
-        Appx_Package_Dir: AppPackages
-        Configuration: ${{ matrix.configuration }}
-
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v2
@@ -114,7 +105,7 @@ jobs:
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v0.9.7
-    - run: |
+      run: |
         echo "Major: ${{ steps.gitversion.outputs.major }}"
         echo "Minor: ${{ steps.gitversion.outputs.minor }}"
         echo "Patch: ${{ steps.gitversion.outputs.patch }}"
@@ -145,3 +136,13 @@ jobs:
         echo "CommitsSinceVersionSource: ${{ steps.gitversion.outputs.commitsSinceVersionSource }}"
         echo "CommitsSinceVersionSourcePadded: ${{ steps.gitversion.outputs.commitsSinceVersionSourcePadded }}"
         echo "CommitDate: ${{ steps.gitversion.outputs.commitDate }}"
+      
+    # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
+    - name: Upload server binaries to release
+      uses: svenstaro/upload-release-action@v1-release
+      with:
+        repo_token: ${{ secrets.ACCESS_TOKEN }}
+        file: 'CelebrationApp\CelebrationApp (Package)\AppPackages'
+        asset_name: CelebrationApp MSIX Package
+        tag: "${{ steps.gitversion.outputs.fullSemVer }}"
+        overwrite: true
