--- a/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
+++ b/.github/workflows/[Main-Master]Example WorkFlow - Github SubModules or Subtree or Github Packages with Nugets.yml
@@ -99,7 +99,7 @@ jobs:
       uses: gittools/actions/gitversion/execute@v0.9.7
     
     - name: Echos git version
-    - run: |
+      run: |
         echo "Major: ${{ steps.gitversion.outputs.major }}"
         echo "Minor: ${{ steps.gitversion.outputs.minor }}"
         echo "Patch: ${{ steps.gitversion.outputs.patch }}"
